--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-css": "node-sass --include-path scss scss/style.scss css/style.css --output-style expandido",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
-  "author": "",
+  "author": "Martin Alvaro",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^7.0.1",
